做了一些小改动

--- a/goguoso-view/search.html
+++ b/goguoso-view/search.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <base href="<%=basePath%>">   
+  <head> 
     <title>${querystr} -谷锅搜索 搜网盘 搜电影</title>
     <meta charset="utf-8">
 	<meta http-equiv="pragma" content="no-cache">
@@ -10,11 +9,11 @@
 	<meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
 	<meta http-equiv="description" content="This is my page">
 
-    <link href="../bootstrap/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../bootstrap/bootstrap/favicon.ico">
-     <script type="text/javascript" src="../bootstrap/bootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../bootstrap/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../bootstrap/bootstrap/js/json.js"></script>
+    <link href="http://www.goguoso.com/bootstrap/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="shortcut icon" href="http://www.goguoso.com/bootstrap/bootstrap/favicon.ico">
+     <script type="text/javascript" src="http://www.goguoso.com/bootstrap/bootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="http://www.goguoso.com/bootstrap/bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://www.goguoso.com/bootstrap/bootstrap/js/json.js"></script>
     <style type="text/css">
     .pagination>li>a, .pagination>li>span{margin-left:0.5rem}
     ul,li{margin:5;padding-left:20px}
@@ -261,7 +260,7 @@
 		<div class="row" style="padding-top: 15px;">
 		<!-- 左边logo -->
 		 <div class="col-md-2">
-				<a href="#" class="thumbnail"> <img src="../bootstrap/bootstrap/img/icon3.png" alt="..."> </a>
+				<a href="#" class="thumbnail"> <img src="http://www.goguoso.com/bootstrap/bootstrap/img/icon3.png" alt="..."> </a>
 		 </div>
 		 <!-- 检索输入框,应用的boostrap3.2输入框组组件input-group -->
 			<div class="col-md-5">
@@ -397,7 +396,7 @@
 	</div>
 	
 	<!-- 百度检索建议插件 -->
-	<script src="../bootstrap/bootstrap/suggest/bootstrap-suggest.js"></script>
+	<script src="http://www.goguoso.com/bootstrap/bootstrap/suggest/bootstrap-suggest.js"></script>
     <script type="text/javascript">
     //百度搜索测试
     var baiduBsSuggest = $("#search_word").bsSuggest({
